tools/tests/errors/surf_cont_04.ki
# slice with a zero step
var a = [1, 2, 3]
discard a[::0]
